# Study-Copilot

./: .env.example  .gitignore  README.md  Study_Copilot_Build_Plan.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
app/: __init__.py  logging_config.py  main.py
app/agent/: __init__.py  context.py  manual_context.py  prompts.py  study_agent.py  validation.py
app/api/: chat.py  courses.py  deep_ask.py  exams.py  health.py  ingest.py  jobs.py  lectures.py  notes.py  plans.py  quizzes.py  search.py  settings.py  study_sets.py  sync.py  transformations.py  vault.py  voice_notes.py  wiki.py
app/config/: __init__.py  settings.py
app/database/: __init__.py  db.py  models.py
docs/: architecture.md
evals/: __init__.py  metrics.py  report.md  report.py  retrieval_dataset.json  runner.py
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: desktop_backend.py  embed.py  evaluate.py  ingest.py  install_sync_task.ps1  organize_wiki_backlinks.py  sync.py  sync_standalone.py  uninstall_sync_task.ps1
tests/: conftest.py  test_agent.py  test_backlinks.py  test_chat_adapters.py  test_chunker.py  test_evals.py  test_exams.py  test_formatter.py  test_ingestion.py  test_learning.py  test_metadata.py  test_notes.py  test_open_notebook_features.py  test_paths.py  test_planning.py  test_pptx_parser.py  test_search.py  test_settings_api.py  test_sync.py  test_twoway.py  test_vault.py  test_voice_notes.py  test_wiki.py
(+103 files in other folders)
