[project]
name = "study-copilot"
version = "0.2.0"
description = "Local-first AI Study Copilot over an Obsidian vault"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["app"]
